    conjectures. It is enabled by default in addition to the usual
    proving mode and can be controlled using the 'falsify' option.
  - Added an abduction mode to find likely missing hypotheses to
    conjectures. It currently works only with the E prover. It is
    enabled by default and can be controlled using the 'abduce'
    option.


*** ML ***

* Improved implementations and signatures of functor Table() and
corresponding functor Set().

  - Specific Set().T supersedes Table().set = unit table, with concrete
    instances Intset, Symset, Termset etc.

  - Data representation is more compact than before, approx. 85% .. 110%
    of a plain list (e.g. see structure AList or Ord_List, respectively).

  - The new "size" operation works with constant time complexity and
    minimal space overhead: small structures have no size descriptor.

* Operations ML_Heap.sizeof1 and ML_Heap.sizeof determine the object
size on the heap in bytes. The latter works simultaneously on multiple
objects, taking implicit sharing of values into account. Examples for
the default 64_32 platform (4 bytes per machine word):

  val s = "aaaabbbbcccc";
  val a = ML_Heap.sizeof1 s;
    (*20: 2 words descriptor + 3 words content*)
  val b = ML_Heap.sizeof [s, s];
    (*20: shared values without list structure*)
  val c = ML_Heap.sizeof1 [s, s];
    (*44 = 20 + 24: shared values + 2 * 3 words per list cons*)

* Operations for Zstd compression (via Isabelle/Scala):

  Zstd.compress: Bytes.T -> Bytes.T
  Zstd.uncompress: Bytes.T -> Bytes.T


*** System ***

* The "rsync" tool has been bundled as Isabelle component, with uniform
version and compilation options on all platforms. This allows to use
more recent options for extra robustness, notably "--secluded-args"
(formerly "--protected-args"). Option -P of "isabelle hg_sync" and
"isabelle sync" has been eliminated accordingly.

* Remote SSH host of "isabelle hg_sync" and "isabelle sync" now works